--- a/mitoGenome_Assembly.Rmd
+++ b/mitoGenome_Assembly.Rmd
@@ -16,6 +16,7 @@ output:
 1. MITObim[^1]: https://github.com/chrishah/MITObim
     +	make sure to follow install instructions, including dependecies: MIRA, PERL, etc.
 2. MUSCLE[^2]: https://www.drive5.com/muscle/
+3. MAFFT[^3]: https://mafft.cbrc.jp/alignment/software/
 
 ***
 
@@ -86,15 +87,15 @@ Assembly(s) completed and saved to: /Users/Ian/MITObim/Assa/Assa_mtGenomes
 The second function *mitoAlign* will:  
 
 * combine all assembled mtGenomes into a single fasta alignment ([project.name]_Assembly_Alignment.fasta)  
-* align the assemblies using MUSCLE, into a single final alignment ([project.name_Aligned_Assemblies.fasta])
+* align the assemblies using MUSCLE or MAFFT, into a single final alignment ([project.name_Aligned_Assemblies.fasta])
 The function *mitoAlign* will spit out the final alignment into your new directory, and tell you where it is:
 ```{r eval=FALSE}
 your alignment of mtGenome assemblies is called:
  /Users/Ian/MITObim/Assa/Assa_mtGenomes/Assa_Aligned_Assemblies.fasta
 ```
-The function requires as input just one thing:
+The function requires as input just one thing, and your choice of aligner ("MUSCLE" or "MAFFT"):
 ```{r eval=FALSE}
-mitoAlign(project.name)
+mitoAlign(project.name, "MUSCLE")
 ```
 * *project.name* is simply what you'd like the alignment to be named   
 
@@ -108,3 +109,4 @@ Good luck!
 
 [^1]:	Hahn, C., Bachmann, L., Chevreux, B. Reconstructing mitochondrial genomes directly from genomic next-generation sequencing - a baiting and iterative mapping approach. Nucleic Acids Research 41:13. doi:10.1093/nar/gkt371 (2013).
 [^2]: Edgar, R.C. MUSCLE: multiple sequence alignment with high accuracy and high throughput. Nucleic Acids Research 32(5). doi:10.1093/nar/gkh340 (2004). 
+[^3]: Katoh, Standley. MAFFT multiple sequence alignment software version 7: improvements in performance and usability. Molecular Biology and Evolution 30:772-780 (2013). 
