added mitoChop and align to reference

--- a/mitoGenome_Assembly.Rmd
+++ b/mitoGenome_Assembly.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "mitoGenome Assembly"
 author: "Ian G. Brennan"
-date: "22 April 2018"
+date: "26 July 2019"
 output:
   html_document:
     toc: yes
@@ -20,9 +20,13 @@ output:
 
 ***
 
-# Multiple mtGenome assembly and alignment using MITObim in R
+If you're on a mac, downloading this repository will include MUSCLE and MAFFT suited for a mac, so you can plug 'n' play. If you're on a Windows or Linux machine, you'll have to do this separately, and adjust the call to the programs in 'mitoAlign.R'. Sorry, I'm just too dumb.
+
+\pagebreak
+
+# Multiple mtGenome assembly/alignment using MITObim from R
 ## Why Bother?
-As a result of the exon capture process for Anchored Hybrid Enrichment projects, we're getting a considerable amount of mitochondrial bycatch. This mtDNA can provide a lot of information about past introgression events, and give a separate phylogenetic history for the group of interest. Also, ::*free data*::. 
+As a result of the exon capture process for Anchored Hybrid Enrichment projects, we're getting a considerable amount of mitochondrial bycatch in our raw reads. This mtDNA can provide a lot of information including a separate phylogenetic history for the group of interest, or even past introgression events. Also, ::*free data*::. 
 
 ***
 
@@ -32,7 +36,8 @@ Start by creating a directory to hold:
 
 * the MITObim pipeline ('MITObim.pl')  
 * the MIRA sequence assembler and mapper directory ('mira.4.0.2...')  
-* the MUSCLE executable ('muscle3.8.31...')  
+* the MUSCLE executable ('muscle3.8.31...')
+* the MAFFT folder ('mafft-mac')
 * a project-specific directory holding all your mtDNA reads for each sample in subdirectories ('Frogs'), and your reference mtGenome as a fasta file, labelled '[taxon]_mtGenome.fasta'  
 
 Here's a quick schematic of what the structure should look like:
@@ -87,20 +92,42 @@ Assembly(s) completed and saved to: /Users/Ian/MITObim/Assa/Assa_mtGenomes
 The second function *mitoAlign* will:  
 
 * combine all assembled mtGenomes into a single fasta alignment ([project.name]_Assembly_Alignment.fasta)  
-* align the assemblies using MUSCLE or MAFFT, into a single final alignment ([project.name_Aligned_Assemblies.fasta])
+* align the assemblies using MUSCLE or MAFFT, into a single final alignment ([project.name_Aligned_Assemblies.fasta])  
+
 The function *mitoAlign* will spit out the final alignment into your new directory, and tell you where it is:
 ```{r eval=FALSE}
 your alignment of mtGenome assemblies is called:
  /Users/Ian/MITObim/Assa/Assa_mtGenomes/Assa_Aligned_Assemblies.fasta
 ```
-The function requires as input just one thing, and your choice of aligner ("MUSCLE" or "MAFFT"):
+The function requires little information to do its job well. Bare minimum it should be given the project name,  and your choice of aligner ("MUSCLE" or "MAFFT"). You can also designate the reference genome for aligning purposes:
 ```{r eval=FALSE}
-mitoAlign(project.name, "MUSCLE")
+mitoAlign(project.name, "MUSCLE", reference.name)
 ```
-* *project.name* is simply what you'd like the alignment to be named   
+* *project.name* what you've been calling the project, so it can find the folder with all your mitoGenome assemblies,
+* *reference.name* if you'd like to improve your multi-mitoGenome alignment, you can align them back to your reference genome. By default, this is NULL, to specify it, just give it the name you provided in the *mitoAssemble* step.
 
 ***   
-   
+
+The third function *mitoChop* will:  
+
+* take the whole mitoGenome alignment and split it up by locus  
+* this function requires the R packages *ape* and *seqinr* to read and write the files.  
+
+The function will kick out the alignment for each mitochondrial locus (CDS/gene, rRNA, tRNA, *et al*.) separately into a new folder:  
+```{r eval=FALSE}
+your separated mitochondrial loci alignments are in a folder called::
+ /Users/Ian/MITObim/Assa/Assa_mtGenomes/Assa_mitoLoci
+```
+You just have to provide a character set file as a .CSV so it knows where to cut it up
+```{r eval=FALSE}
+mitoChop(project.name, alignment, character.sets)
+```
+* *project.name* is again, just what you've been calling the project so far (name of the directory)  
+* *alignment* the name of the output .fasta file from the *mitoAlign* step  
+* *character.sets* is the .CSV file with three columns "Name", "Minimum", and "Maximum". These correspond to the locus name, the starting position (*Minimum*), and final position (*Maximum*) for each locus. An example is included in the respository ("mitoGenome_Annotations_Example.csv").  
+
+***   
+
 There's probably a bunch of other slick things I could do after this, like have it plot the individual assembly lengths, but I'm not sure it's worth it at the moment. Let me know if there's something specific you're looking for though.  
 Good luck!  
 
