--- a/mitoGenome_Assembly.Rmd
+++ b/mitoGenome_Assembly.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "mitoGenome Assembly"
 author: "Ian G. Brennan"
-date: "30 June 2021"
+date: "4 May 2022"
 output:
   html_document:
     toc: yes
@@ -204,11 +204,32 @@ mitoChop(project.name, alignment, character.sets=NULL)
 
 ***   
 
+\pagebreak
+
+# Running on Linux Remotely
+
+Instead of running these scripts on a local machine you may want to run them on a server with more memory elsewhere. If you can install and run [RStudio Server](https://www.rstudio.com/products/rstudio/download-server/) on your remote machine, you can log-in and run this workflow using the same file structure and instructions as above.  
+
+I've included the MIRA linux version in this repository but you might find you need to download and install it yourself. Make sure to establish the directory structure as outlined on page 3. Once you open an RStudio Server window, you'll need to source the functions we'll need.
+```{r eval=FALSE}
+source("/PATH_TO_CODE/mtGenome_Assembly_Nick.R")
+```
+Then set your working directory to the project-specific directory (I've called this directory 'Frogs'). This holds a subdirectory for each sample, and your reference mitogenome.
+```{r eval=FALSE}
+setwd("/PATH_TO_DIR/mtGenomes/Frogs")
+```
+
+From there, just follow the rest of the instructions!
+
+
+***   
+
+
 There's probably a bunch of other slick things I could do after this, like have it plot the individual assembly lengths, but I'm not sure it's worth it at the moment. Let me know if there's something specific you're looking for though.  
 Good luck!  
 
 ***
- 
+
 
 [^1]:	Hahn, C., Bachmann, L., Chevreux, B. Reconstructing mitochondrial genomes directly from genomic next-generation sequencing - a baiting and iterative mapping approach. Nucleic Acids Research 41:13. doi:10.1093/nar/gkt371 (2013).
 [^2]: Edgar, R.C. MUSCLE: multiple sequence alignment with high accuracy and high throughput. Nucleic Acids Research 32(5). doi:10.1093/nar/gkh340 (2004). 
